--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ multiqc*.json
 multiqc*.txt
 multiqc*.log
 !**/*multiqc.html
+*.html linguist-detectable=false
 # History files
 .Rhistory
 .Rapp.history
